@@ -13,6 +13,11 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+# On SPU this test fails because the executable exceeds local storage size.
+if { [istarget "spu*-*-*"] } {
+        return 0
+}
+
 set testfile pr9167
 set srcfile ${testfile}.cc
 if [prepare_for_testing $testfile.exp $testfile $srcfile {debug c++}] {
